# incremental-hdiff-paper

./: .gitignore  main.tex
graphs/: pyproject.toml
graphs/data/: benchmarks.csv  benchmarks.json  new_generate_benchmarks.csv
graphs/graphs/: main.py  plot_benchmarks.py
related_work/: summary.tex
related_work/summaries/: An_Efficient_Algorithm_for_Type_safe_Structural_Diffing.tex  Concise_Type-Safe_and_Efficient_Structural_Diffing.tex  Sums_of_Products_for_Mutually_Recursive_Datatypes.tex
sections/: appendix.tex  background.tex  cover.tex  generic-lib-comp.tex  introduction.tex  planning.tex  preliminary_results.tex  references.bib
sections/background/: concise-type-safe-structural-diff.tex  main.tex  selective-memoization.tex  structural-diff.tex  sums-of-products.tex
tables/: plot_generate_result_benchmark.tex
