[tool.poetry]
name = "graphs"
version = "0.1.0"
description = ""
authors = ["Jort van Gorkum <jortvangorkum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.11.2"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
